# Examen-Parcial-3

./: CMakeLists.txt  README.md  Simulation.cpp  Simulation.h  launcher.cpp  launcher.h  main.cpp
Clases/: Task.cpp  Task.h  Worker.cpp  Worker.h  WorkerType.h
Tarea/: Tarea.cpp  Tarea.h
actor/: Actor.cpp  Actor.h
crud/: crud.cpp  crud.h
